--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git Version Control</title>
 </head>
 <body>
-    <h1>Welcome to My Web App!</h1>
+    <h1>Welcome to My Git Version Control!</h1>
     <p>This is my first Git project.</p>
 </body>
 </html>
