--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Welcome to My Git Version Control!</h1>
     <p>This is my first Git project.</p>
+<footer>
+    <p>&copy; 2025 My Git Project. All rights reserved.</p>
+</footer>
 </body>
 </html>
 
