Modified footer content in main branch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Welcome to My Git Version Control!</h1>
     <p>This is my first Git project.</p>
+<footer>
+    <p>Developed by MyCompany | Contact: info@example.com</p>
+</footer>
 </body>
 </html>
 
